final errors fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://spagnolocarlos.github.io/shopall",
+  "homepage": "https://SpagnoloCarlos.github.io/ShopAll",
   "name": "web-export",
   "version": "0.1.0",
   "private": true,
